@@ -1,3 +1,8 @@
+2004-09-29  Mark D. Baushke  <mdb@cvshome.org>
+
+	* sanity.sh: Workaround MacOS X '/bin/ls' is not returning false
+	when no files are listed.  Label some old tests.
+
 2004-09-29  Derek Price <derek@ximbiot.com>
 
 	* cvs.h: Include parseinfo.h.
